--- a/client/src/App.css
+++ b/client/src/App.css
@@ -324,3 +324,18 @@ table button:hover {
   right: 5px;
   cursor: pointer;
 }
+
+
+/* Media queries for responsiveness */
+@media only screen and (max-width: 768px) {
+  .modal {
+    max-width: 100%;
+    width: 90%;
+    overflow: scroll;
+  }
+
+  table{
+    max-width: 100%;
+    width: 90%;
+  }
+}
